package at.fhj.msd.swdesign.factorymethod;

public class ConcreteProduct extends Product {
}
