package at.fhj.msd.swdesign.factorymethod;

public abstract class Creator {

    abstract Product factoryMethod();


}
