package at.fhj.msd.swdesign.factorymethod;

public abstract class Product {
}
